# neuro-currentRF

./: .gitignore  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  README.md  appveyor.yml  changes.html  conftest.py  development.html  env-dev.yml  genindex.html  index.html  installing.html  objects.inv  pyproject.toml  references.html  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/: labeler.yaml
.github/workflows/: auto-label.yaml  doc.yaml  lint.yml  test-linux.yml  test-posix.yml  test-windows.yml
_downloads/2a4f08f3c64a9e3f6b288311fe49f05c/: example.ipynb
_downloads/ef9845e8ebafa12a1513da66be25ebf5/: example.py
_sources/: changes.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: example.rst.txt  index.rst.txt  sg_execution_times.rst.txt
api/: index.html
auto_examples/: example.html  index.html  sg_execution_times.html
docs/: Makefile  changes.rst  conf.py  development.rst  index.rst  installing.rst  links.inc  references.bib  references.rst
docs/_static/: custom.css
docs/api/: index.rst  ncrf.rst
example/: example.ipynb  example.py
examples/: GALLERY_HEADER.rst  example.py
ncrf/: __init__.py  _crossvalidation.py  _fastac.py  _model.py  _ncrf.py  opt.pyx  test_ncrf.py
ncrf/dsyevh3C/: __init__.py  dsyevh3py.pyx
ncrf/tests/: __init__.py  fetch.py  test_model.py  test_ncrf.py
